# nautobot-spb

./: ansible.cfg  awx-demo.yaml  pyproject.toml  requirements.yml
collections/ansible_collections/networktocode.nautobot-5.15.0.info/: GALAXY.yml
collections/ansible_collections/networktocode.nautobot-5.16.0.info/: GALAXY.yml
collections/ansible_collections/networktocode/nautobot/: FILES.json  MANIFEST.json
nautobot-data/: extensible_data.yml  ipam_data.yml  nautobot_devices.yml
nautobot_spb/: README.md  __init__.py  admin.py  extend.py  features.py  forms.py  models.py  navigation.py  plugin.py  plugin_old.py  registration.py  tables.py  urls.py  views.py
nautobot_spb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nautobot_spb/api/: __init__.py  serializers.py  urls.py  views.py
nautobot_spb/migrations/: 0001_initial.py  0002_alter_spb_sap_options_spb_sap_encapsulations.py  0003_remove_spb_sap_encapsulations_and_more.py  0004_alter_spb_sap_options.py  0005_alter_spb_topology_topology_hello_interval_and_more.py
nautobot_spb/templates/nautobot_spb/: spb_bvlan.html  spb_interface.html  spb_ipvpn_bind.html  spb_ipvpn_redist.html  spb_isis.html  spb_sap.html  spb_sap_edit.html  spb_service.html  spb_topology.html  spb_topology_edit.html
nautobot_spb/templatetags/: spb_filters.py
roles/load_nautobot/tasks/: main.yml
